<resources>
    <string name="app_name">SportSoft</string>
    <string name="Restore_password"><u>Restore password</u></string>
    <string name="Arbitrator">Arbitrator</string>
    <string name="MatchEventManagement">Match event management</string>
    <string name="Authorization">Authorization</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="Input">Input</string>
    <string name="MatchProgress">Match progress (Live)</string>
    <string name="HomeTeam">Home team</string>
    <string name="AwayTeam">Away team</string>
    <string name="Score">Score</string>
    <string name="Penalty">Penalty</string>
    <string name="TechnicalDefeat">Technical defeat</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="TeamFouls">Team fouls</string>
    <string name="FirstHalf">1 half</string>
    <string name="SecondHalf">2 half</string>
    <string name="MatchEvents">Match events</string>
    <string name="Event">Event</string>
    <string name="Player">Player</string>
    <string name="Assistant">Assistant</string>
    <string name="Minute">Minute</string>
    <string name="UseTimerTime">Use timer time</string>
    <string name="Reset">Reset</string>
    <string name="Add">Add</string>
    <string name="ListOfEvents">List of events</string>
    <string name="ExitLive">Exit Live</string>
    <string name="FinishTheMatch">Finish the match</string>
    <string name="MatchRegister">Match register</string>
    <string name="FilterDate">Filter by date</string>
    <string name="DateFormat">DD.MM.YYYY</string>
    <string name="Date">Date</string>
    <string name="Teams">Teams</string>
    <string name="PrematchProtocol">Pre-match protocol</string>
    <string name="MatchReferees">Referees for the match</string>
    <string name="FullName">Full name</string>
    <string name="Position">Position</string>
    <string name="Delete">Delete</string>
    <string name="AddReferee">Add a referee</string>
    <string name="Number">Number</string>
    <string name="Save">Save</string>
    <string name="SaveAndStartMatch">Save and start match</string>
    <string name="IncorrectData">Incorrect data</string>
    <string name="EnterAllDetails">Enter all details</string>
    <string name="NetworkError">Network error</string>
    <string name="TheRequestFailed">The request failed</string>
    <string name="PlayerMatch">Player of the match %s</string>
    <string name="TeamСomposition">Team composition of %s</string>
    <string name="DataSuccessfullySaved">Protocol data successfully saved</string>
    <string name="TheMatchIsCompleted">The match is completed, the data is successfully saved in the protocol</string>
    <string name="ToTheListOfMatches">To the list of matches</string>
    <string name="LiveExitSnackBarText">To exit Live mode, stop the timer or end the match</string>
</resources>